deploy/dev/111-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: prr
 namespace: green-dev
 labels:
  name: prr
spec:
  replicas: 1
  template:
    metadata:
      name: prr
      namespace: green-dev
      labels:
        tier: backend
        lang: nodejs
        name: prrservice
    spec:
      containers:
        - name: prr
          image: nexussrv.office.traffics-switch.de:9843/traffics/prrservice:develop
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
          livenessProbe:
            httpGet:
              path: /alive
              port: web
            initialDelaySeconds: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /alive
              port: web
            initialDelaySeconds: 3
            periodSeconds: 30
          volumeMounts:
            - name: trafficsinternalrootcacrt
              mountPath: "/etc/traffics/ssl/"
              readOnly: true
            - name: authserviceconfig
              mountPath: "/etc/authservice/config/"
              readOnly: true
          ports:
          - name: web
            containerPort: 3010
      volumes:
        - name: trafficsinternalrootcacrt
          secret:
            secretName: traffics-internal-root-ca-crt
        - name: authserviceconfig
          secret:
            secretName: auth-service-config
      imagePullSecrets:
        - name: nexusregisterykey
