deploy/dev/222-service.yaml
kind: Service
apiVersion: v1
metadata:
 name: documentservice
 namespace: green-dev
 labels:
   name: document
spec:
 selector:
   tier: backend
   name: documentservice
 type: ClusterIP
 ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3010
